--- a/src/style.css
+++ b/src/style.css
@@ -20,21 +20,22 @@ a:hover {
 }
 
 .bouton {
+	font-family: Roboto;
 	width: 200px;
 	height: 80px;
 	border: 4px solid rgb(225, 60, 60);
-	background: transparent;
+	background: none;
 	color: rgb(225, 60, 60);
 	cursor: pointer;
 	font-size: 25px;
-	box-shadow: 0 0 15px 0 0 10px rgb(255, 72, 72);
+	box-shadow: 0 0 15px rgb(255, 72, 72);
 	transition: 0.2s;
 }
 
 .bouton:hover {
 	background: rgba(255, 37, 37, 0.2);
 	color: #fff;
-	box-shadow: 0 0 20px 0 0 12px rgb(255, 110, 110);
+	box-shadow: 0 0 20px rgb(255, 110, 110);
 }
 
 #chrono {
